updated the readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ title: "loco-pipe: a Snakemake pipeline for low-coverage whole-genome sequencing
 output:
     github_document:
         toc: true
-        toc_depth: 4
+        toc_depth: 2
 ---
 
 ```{r setup, include=FALSE}
@@ -46,19 +46,31 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Before you start
 
+#### Reference genome
+
 This pipeline requires a moderately contiguous reference genome for your study system. Currently, it does not support highly fragmented reference genomes, since most analyses are parallelized by scaffolds. Having too many scaffolds or unscaffolded contigs will create too many parallel jobs for Snakemake and a job scheduler to handle. We recommend that 90% of the genome should be consisted of no more than 100 scaffolds (i.e. L90 < 100). Small scaffolds and contigs should be excluded from the analysis (we will ask you to provide a list of scaffolds that you would like to include).
+
+#### Sequence alignment files
 
 In addition, we assume that properly mapped and filtered bam files are ready to be used as input files for loco-pipe. You can choose your favorite software and/or pipeline to go from fastq to bam, but one pipeline that we particularly recommend is [grenepipe](https://github.com/moiexpositoalonsolab/grenepipe). 
 
+#### grenepipe
+
 grenepipe is a Snakemake pipeline for variant calling from raw sequence data. Although it is developed for high-coverage data, you can skip the variant calling step by using the `all_qc` [shortcut](https://github.com/moiexpositoalonsolab/grenepipe/wiki/Advanced-Usage#running-only-parts-of-the-pipeline) and turning the `bcftools-stats` switch in the config file to `false`. This way, grenepipe will stop after generating the final bam files and their associated quality reports. (We also recommend turning the `clip-read-overlaps` switch to `true` and setting `VALIDATION_STRINGENCY=SILENT` for picard MarkDuplicates in the config file.) grenepipe is very thoughtfully built and [extensively documented](https://github.com/moiexpositoalonsolab/grenepipe/wiki), and it is the main inspiration for loco-pipe. Familiarizing yourself with grenepipe will also make loco-pipe much easier to learn.
+
+If you choose to use grenepipe to generate your bam files. Here are our recommendations on making the transition from grenepipe to loco-pipe as seamless as possible. 
+
+  >
+  * `all_qc` flag and `bcftools-stats: false`
+  * `clip-read-overlaps: true` and `VALIDATION_STRINGENCY=SILENT` for `picard MarkDuplicates`
 
 ## Setting up the pipeline
 
-1. Download `loco-pipe` from GitHub (e.g. using `git clone`).
+1. Install [mamba](https://mamba.readthedocs.io/en/latest/mamba-installation.html#mamba-install) if you have not yet done so. A fresh install with Mambaforge is highly recommended.
 
-2. Install [mamba](https://mamba.readthedocs.io/en/latest/mamba-installation.html#mamba-install) if you have not yet done so. A fresh install with Mambaforge is highly recommended.
+2. Download `loco-pipe` from GitHub (e.g. using `git clone`). We recommend you to download it to a folder where you store your software programs. We will refer to the full path of the resulting `loco-pipe` folder as `PIPEDIR`.
 
-3. Create the `loco-pipe` conda environment using mamba by running `mamba env create -f loco-pipe/loco-pipe.yaml`.
+3. Create the `loco-pipe` conda environment using mamba by running `mamba env create -f $PIPEDIR/workflow/envs/loco-pipe.yaml` (replace $PIPEDIR with a real path).
 
 4. (Optional) If you would like to run PCA with the software [PCAngsd](https://github.com/Rosemeis/pcangsd) using loco-pipe, you **must** install PCAngsd manually as it is not yet available on conda. Please install it to a conda environment named `pcangsd` using the script below.
 
@@ -80,12 +92,19 @@ grenepipe is a Snakemake pipeline for variant calling from raw sequence data. Al
     ```
 
 5. Set up the file structure. 
-    * First, create a base directory for your project. This folder should be separate from the loco-pipe folder. You can name it however you want (just avoid special characters other than dashes and underscores), but we will refer to the path to this folder as `BASEDIR`.
+    * First, create a base directory for your project. This folder should be separate from the loco-pipe folder. You can name it however you want (just avoid special characters other than dashes and underscores), but we will refer to the full path of this folder as `BASEDIR`.
     * Within `BASEDIR`, create a new folder called `docs`. You can also have your sequencing data (e.g. fastq and bam files) in separate folders in `BASEDIR`, but this is not required.
 
-6. Prepare a **sample table** and a **chromosome table**. Both of them should be tab separated. Store them in the `docs` folder in `BASEDIR`.
-    * Sample table: This table should contain a minimum of three columns. A column named exactly as `sample_name`; a column named exactly as `bam` which stores the full paths of all your bam files, and a column that stores the population-level traits you wish to segregate the specimens with. You will enter the name of the third column into the config file. 
-    * Chromosome table: This table should contain one or two columns. The first column is required, and it records the names of all chromosomes/scaffolds/contigs that you would like to include in the analysis. As mentioned earlier, we recommend against including too many of them (e.g. < 100). These should exactly match the names in the reference genome. The second column is optional, and it records shortened or alternative names of the chromosomes/scaffolds/contigs which you would like to show on the plots. If the second column is empty, the orignal names will be shown.
+6. Prepare a **sample table** and a **chromosome table**. Both of them should be tab separated. Store them in the `docs` folder in `BASEDIR`. You can name them however you want.
+    * Sample table: This table should contain a minimum of three columns in no particularly order. One column should be named exactly as `sample_name` and it should contain sample IDs of all the samples to be included in the analysis. Another column should be named exactly as `bam` and it should store the full paths of the bam file for each sample. A third column should specify the grouping information you wish to segregate the samples by These could be sampling sites, populations, ecotypes, sex, subspecies, species, etc. You will enter the name of the third column into the pipeline configuration file (see below). 
+    
+        > A few tips about the sample table:
+            * Sample names have to be unique, and each sample should correspond to a single bam file (i.e. we assume that if you have multiple bam files for a single sample, they have already been merged). In cases where you would like to keep different bam files from the same sample separate, e.g. for batch effect control, you will need to distinguish them by assigning them different sample names, e.g. by adding a suffix to their original names. If you do this, please also note that including multiple copies of the same sample can severely bias certain analyses, such as PCA, so we recommend you to only do this in the first iteration of the pipeline, and once the risk of batch effect is eliminated, you should merge or remove the duplicated samples.
+            * You can have multiple grouping variables
+            * You can run part of the pipeline first and then assign the grouping variable
+            * In general, you can have several iterations of the sample table
+        
+    * Chromosome table: This table should contain one or two columns. The first column is required, and it records the names of all chromosomes/scaffolds/contigs that you would like to include in the analysis. As mentioned earlier, we recommend against including too many of them (e.g. < 100). These should exactly match the names in the reference genome. The second column is optional, and it records shortened or alternative names of the chromosomes/scaffolds/contigs which you would like to show on the plots. If the second column is empty, the original names will be shown.
 
 7. Edit the configuration files
     * The pipeline config file `loco-pipe.yaml`: This config file stores information that could be read by the loco-pipe. You should change the elements under the "global" tab based on your own research data and modify the hyper-parameters below other tabs depending on your computing power. This file is also designed to allow you control what features you want to include in your own runs. For example, if you wish not to have calculate Fst, you can edit the 'get_Fst: true' to 'get_Fst: true', and the "get_Fst" switch will be turned off. The config file is thouroughly annotated, so please read it through and make edits when needed.
@@ -100,10 +119,11 @@ grenepipe is a Snakemake pipeline for variant calling from raw sequence data. Al
 3. You are now ready to launch the pipeline. We recommend to always start with a dry run using the `-n` flag before actually running it.
     ```{bash eval=FALSE}
     snakemake \
+    --use-conda \
     --conda-frontend mamba \
     --directory $BASEDIR \
     --scheduler greedy \
     --rerun-triggers mtime \
-    --snakefile loco-pipe.smk 
+    --snakefile $PIPEDIR/workflow/pipelines/loco-pipe.smk 
     ```
-    When running it on a computer cluser, make sure to use the `--profile` flag to specify your cluster profile. Other flags that may be useful are `--conda-prefix`, `--default-resources`, `-p`, etc.
+    When running it on a computer cluster, make sure to use the `--profile` flag to specify your cluster profile. Other flags that may be useful are `--conda-prefix`, `--default-resources`, `-p`, etc.
