updated some documentations

--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,9 @@ If you choose to use grenepipe to generate your bam files. Here are our recommen
     cd $SOFTWARE_DIR # replace $SOFTWARE_DIR with a real path
     # download PCAngsd from Github
     git clone https://github.com/Rosemeis/pcangsd.git
-    cd pcangsd  
+    cd pcangsd
+    # check out the version the loco-pipe is based on
+    git checkout 2880c6aafe5c8b075f7730779cc6f94fee2c9bbb
     # create an environment for PCAngsd 
     mamba env create -f environment.yml  
     # activate the conda environment
@@ -91,11 +93,22 @@ If you choose to use grenepipe to generate your bam files. Here are our recommen
     conda deactivate  
     ```
 
-5. Set up the file structure. 
+5. (Optional) If you would like to run local PCA with the [lostruct](https://github.com/petrelharp/local_pca) package in R using loco-pipe, you **must** install lostruct (in addition to PCAngsd, see above) manually as it is not yet available on conda. Please install it to a conda environment named `lostruct` using the script below.
+
+    ```{bash eval=FALSE}
+    mamba create -n lostruct -c conda-forge r-essentials=4.2 r-tidyverse=2.0.0 r-devtools=2.4.5 r-cowplot=1.1.1
+    conda activate -n lostruct
+    ## this is an awkward solution, but I had to do it because lostruct would be installed to my system library location rather than the conda environment specific one instead
+    devtools::install_github("petrelharp/local_pca/lostruct")
+    ```
+
+## Preparing the project directory and required input files
+
+1. Set up the file structure. 
     * First, create a base directory for your project. This folder should be separate from the loco-pipe folder. You can name it however you want (just avoid special characters other than dashes and underscores), but we will refer to the full path of this folder as `BASEDIR`.
     * Within `BASEDIR`, create a new folder called `docs`. You can also have your sequencing data (e.g. fastq and bam files) in separate folders in `BASEDIR`, but this is not required.
 
-6. Prepare a **sample table** and a **chromosome table**. Both of them should be tab separated. Store them in the `docs` folder in `BASEDIR`. You can name them however you want.
+2. Prepare a **sample table** and a **chromosome table**. Both of them should be tab separated. Store them in the `docs` folder in `BASEDIR`. You can name them however you want.
     * Sample table: This table should contain a minimum of three columns in no particularly order. One column should be named exactly as `sample_name` and it should contain sample IDs of all the samples to be included in the analysis. Another column should be named exactly as `bam` and it should store the full paths of the bam file for each sample. A third column should specify the grouping information you wish to segregate the samples by These could be sampling sites, populations, ecotypes, sex, subspecies, species, etc. You will enter the name of the third column into the pipeline configuration file (see below). 
     
         > A few tips about the sample table:
@@ -106,17 +119,15 @@ If you choose to use grenepipe to generate your bam files. Here are our recommen
         
     * Chromosome table: This table should contain one or two columns. The first column is required, and it records the names of all chromosomes/scaffolds/contigs that you would like to include in the analysis. As mentioned earlier, we recommend against including too many of them (e.g. < 100). These should exactly match the names in the reference genome. The second column is optional, and it records shortened or alternative names of the chromosomes/scaffolds/contigs which you would like to show on the plots. If the second column is empty, the original names will be shown.
 
-7. Edit the configuration files
-    * The pipeline config file `loco-pipe.yaml`: This config file stores information that could be read by the loco-pipe. You should change the elements under the "global" tab based on your own research data and modify the hyper-parameters below other tabs depending on your computing power. This file is also designed to allow you control what features you want to include in your own runs. For example, if you wish not to have calculate Fst, you can edit the 'get_Fst: true' to 'get_Fst: true', and the "get_Fst" switch will be turned off. The config file is thouroughly annotated, so please read it through and make edits when needed.
-    * The cluster config file `cluster_config.yaml` (Optional): This config files specifies the resources each step of the pipeline can use on a computer cluster.
+3. Edit the configuration files
+    * The pipeline config file `loco-pipe.yaml`: This config file stores information that could be read by the loco-pipe. You should change the elements under the "global" tab based on your own research data and modify the hyper-parameters below other tabs depending on your preference. This file is also designed to allow you control what features you want to include in your own runs. For example, if you wish not to have calculate Fst, you can edit the 'get_Fst: true' to 'get_Fst: true', and the "get_Fst" switch will be turned off. The config file is thoroughly annotated, so please read it through and make edits when needed.
+    * The cluster config file `workflow/profiles/slurm/cluster_config.yaml` (Optional): This config files specifies the resources each step of the pipeline can use on a computer cluster.
 
-## Launch the pipeline
+## Launching the pipeline
 
 1. Activate the `loco-pipe` environment with `conda activate loco-pipe`.
 
-2. Set your working directory as `loco-pipe`.
-
-3. You are now ready to launch the pipeline. We recommend to always start with a dry run using the `-n` flag before actually running it.
+2. You are now ready to launch the pipeline. We recommend to always start with a dry run using the `-n` flag before actually running it.
     ```{bash eval=FALSE}
     snakemake \
     --use-conda \
@@ -127,3 +138,7 @@ If you choose to use grenepipe to generate your bam files. Here are our recommen
     --snakefile $PIPEDIR/workflow/pipelines/loco-pipe.smk 
     ```
     When running it on a computer cluster, make sure to use the `--profile` flag to specify your cluster profile. Other flags that may be useful are `--conda-prefix`, `--default-resources`, `-p`, etc.
+
+## Future directions
+
+We plan to improve the functionality of loco-pipe, by incorporating more analyses (e.g. GWAS, dxy) into this pipeline and also enabling more functionalities for the existing softwares (e.g. ANGSD, Ohana). In terms of variety, we will also provide more software options for users to pick for certain analysis (e.g. winSFS, ngsAdmix).
